<resources>
    <string name="app_name">online-Pharmcy</string>
    <string name="about_us">درباره مـــا</string>
    <string name="resources">منــابــع</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="loading">در حال دریافت اطلاعات…</string>
    <string name="error">خطا!</string>
    <string name="seccessfully">با موفقیت ذخیره شد</string>
    <string name="not_information">اطلاعاتی دریافت نشد!</string>
    <string name="new_sickneww">\" تا مورد جدید برای علایم بیماری ها وجود دارد\"</string>
    <string name="NewCase">\"مورد جدید دارو جهت بروز رسانی وجود دارد \"</string>
    <string name="newsickness">مورد جدید بیماری جهت بروز رسانی وجود دارد</string>
    <string name="NewHoney">مورد جدید عسل درمانی جهت بروز رسانی وجود دارد</string>
    <string name="newavarez">مورد جدید عوارض دارو جهت بروز رسانی وجود دارد</string>
    <string name="exit">منطمئنی می خواهی خارج بشی؟</string>
    <string name="yes">آره</string>
    <string name="no">نه</string>
    <string name="update">بروز رسانی</string>
    <string name="opt_out">انصراف</string>
    <string name="resources_drugs_sickness">مرجع کامل داروها و بیماری ها</string>
    <string name="ten">10</string>
    <string name="favorite_item">لیست علاقمندی ها</string>
    <string name="setting_item">تنظیمات</string>
    <string name="about_item">درباره ما</string>
    <string name="resources_item">منابع</string>
    <string name="exit_item">خروج</string>
    <string name="pathData_Setting">M19.43,12.98c0.04,-0.32 0.07,-0.64 0.07,-0.98s-0.03,-0.66 -0.07,-0.98l2.11,-1.65c0.19,-0.15 0.24,-0.42 0.12,-0.64l-2,-3.46c-0.12,-0.22 -0.39,-0.3 -0.61,-0.22l-2.49,1c-0.52,-0.4 -1.08,-0.73 -1.69,-0.98l-0.38,-2.65C14.46,2.18 14.25,2 14,2h-4c-0.25,0 -0.46,0.18 -0.49,0.42l-0.38,2.65c-0.61,0.25 -1.17,0.59 -1.69,0.98l-2.49,-1c-0.23,-0.09 -0.49,0 -0.61,0.22l-2,3.46c-0.13,0.22 -0.07,0.49 0.12,0.64l2.11,1.65c-0.04,0.32 -0.07,0.65 -0.07,0.98s0.03,0.66 0.07,0.98l-2.11,1.65c-0.19,0.15 -0.24,0.42 -0.12,0.64l2,3.46c0.12,0.22 0.39,0.3 0.61,0.22l2.49,-1c0.52,0.4 1.08,0.73 1.69,0.98l0.38,2.65c0.03,0.24 0.24,0.42 0.49,0.42h4c0.25,0 0.46,-0.18 0.49,-0.42l0.38,-2.65c0.61,-0.25 1.17,-0.59 1.69,-0.98l2.49,1c0.23,0.09 0.49,0 0.61,-0.22l2,-3.46c0.12,-0.22 0.07,-0.49 -0.12,-0.64l-2.11,-1.65zM12,15.5c-1.93,0 -3.5,-1.57 -3.5,-3.5s1.57,-3.5 3.5,-3.5 3.5,1.57 3.5,3.5 -1.57,3.5 -3.5,3.5z</string>
    <string name="pathData_heart">M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z</string>
    <string name="pathData_information">M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z</string>
    <string name="pathData_sourceMerge">M7,3A3,3 0 0,1 10,6C10,7.29 9.19,8.39 8.04,8.81C8.58,13.81 13.08,14.77 15.19,14.96C15.61,13.81 16.71,13 18,13A3,3 0 0,1 21,16A3,3 0 0,1 18,19C16.69,19 15.57,18.16 15.16,17C10.91,16.8 9.44,15.19 8,13.39V15.17C9.17,15.58 10,16.69 10,18A3,3 0 0,1 7,21A3,3 0 0,1 4,18C4,16.69 4.83,15.58 6,15.17V8.83C4.83,8.42 4,7.31 4,6A3,3 0 0,1 7,3M7,5A1,1 0 0,0 6,6A1,1 0 0,0 7,7A1,1 0 0,0 8,6A1,1 0 0,0 7,5M7,17A1,1 0 0,0 6,18A1,1 0 0,0 7,19A1,1 0 0,0 8,18A1,1 0 0,0 7,17M18,15A1,1 0 0,0 17,16A1,1 0 0,0 18,17A1,1 0 0,0 19,16A1,1 0 0,0 18,15Z</string>
    <string name="pathData_ExitApp">M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z</string>
    <string name="Information">لطفا اطلاعات لازم را وارد کنید</string>
    <string name="Type1fit">\" عزیز شما دچار چاقی نوع 1 هستید و حدود \"</string>
    <string name="ExtraFit_kg">\" کیلو اضافه وزن دارید\"</string>
    <string name="Type2fit">\" عزیز شما دچار چاقی نوع 2 هستید و حدود \"</string>
    <string name="Type3fit">\" عزیز شما دچار چاقی نوع 3 هستید و حدود \"</string>
    <string name="about">\" عزیز شما حدود \"</string>
    <string name="weight_tall_suitable">\" عزیز وزن و قدت باهم متناسبه ولی میتونه بهتر از این هم بشه \"</string>
    <string name="Underweight">\" کیلو کمبود وزن دارید\"</string>
    <string name="very_underWeight">\" عزیز شما کمبود وزن شدید داری حدود \"</string>
    <string name="scale_body">محاسبه شاخص توده بدنی</string>
    <string name="gender">جنسیت</string>
    <string name="female">خـانـم</string>
    <string name="male">آقــــا</string>
    <string name="tall">قـــــد :</string>
    <string name="cm">cm</string>
    <string name="wieght">وزن :</string>
    <string name="kg">kg</string>
    <string name="name">نــــام :</string>
    <string name="name_hint">نام</string>
    <string name="not_adding_fav">موردی به علاقمندی ها اضافه نشده!</string>
    <string name="favorite">لیست علاقمندی ها</string>
    <string name="searchText_drugs">برای جستجوی داروی مورد نظر، نام فارسی یا انگلیسی دارو را در کادر بالا وارد کنید…</string>
    <string name="searchText_Sickness">برای جستجوی بیماری مورد نظر، نام فارسی یا انگلیسی بیماری را در کادر بالا وارد کنید…</string>
    <string name="searchText_Tashkhis">"برای جستجوی علایم بیماری از کادر جستجو استفاده کنید… با ظاهر شدن لیست علایم روی علامت مورد نظر کلیک کنید تا اسامی تمام بیماری هایی که علامت مورد نظر را دارند نمایش داده شود… سپس با انتخاب کردن هر کدام از بیماریها اطلاعات کاملی در مورد آن بیماری نمایش داده میشود"</string>
    <string name="List_sickness">\"لیست تمام بیماری هایی که علائم \"</string>
    <string name="display">\" را نشان میدهند:\"</string>
    <string name="search">جستجو...</string>
    <string name="setting">تنظیمات</string>
    <string name="staying_trunOn_Screen">روشن ماندن صفحه نمایش</string>
    <string name="putting_font_text">فونت متن را انتخاب کنید:</string>
    <string name="selection_TextSize">سایز متن را انتخاب کنید:</string>
    <string name="selection_space_lines">فاصله بین خطوط را انتخاب کنید:</string>
    <string name="exampleText">"متن نمونه : اسپوروتريكوز عبارت‌ است‌ از يك‌ بيماري‌ قارچي‌ عفوني‌ كه‌ باعث‌ ايجاد زخم‌ و آبسه‌ در پوست‌، غدد لنفاوي‌ و عروق‌ لنفاوي‌ مي‌گردد. مزرعه‌داران‌ و باغداران‌ به‌ ويژه‌ افرادي‌ كه‌ با گل‌سرخ‌، خزه‌ مردابي‌ و يا زرشك‌ سر و كار دارند، بيشتر آلوده‌ مي‌شوند"</string>
    <string name="adding_cilpboard">به کلیپ بورد اضافه شد</string>
    <string name="description_of_the_disease">شرح بیماری:</string>
    <string name="symptoms">علائم:</string>
    <string name="drug_name">Drug Name</string>
    <string name="group_drugs">گروه دارویی:</string>
    <string name="uses_cases">موارد مصرف:</string>
    <string name="Consumption">میزان مصرف:</string>
    <string name="description_of_the_drug">توضیحات دارو:</string>
    <string name="changing_sizetext">تغییر سایز متن بطور موقت</string>
</resources>