<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange"
        android:id="@+id/toolbar">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scale_body"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:paddingRight="20dp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/name_hint"
            android:gravity="center"
            android:textSize="30sp"
            android:background="@drawable/back_style"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="30sp"
            android:textColor="@color/purple"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp">

        <EditText
            android:id="@+id/edt_wazn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/kg"
            android:gravity="center"
            android:textSize="30sp"
            android:inputType="number"
            android:background="@drawable/back_style"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wieght"
            android:textSize="30sp"
            android:textColor="@color/purple"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp">

        <EditText
            android:id="@+id/edt_qad"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/cm"
            android:gravity="center"
            android:textSize="30sp"
            android:inputType="number"
            android:background="@drawable/back_style"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tall"
            android:textSize="30sp"
            android:textColor="@color/purple"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3"
        android:padding="10dp">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/rdo_man"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textSize="30sp"
                android:layout_gravity="center"/>
            <RadioButton
                android:id="@+id/rdo_women"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="30sp"
                android:layout_gravity="center"/>
        </RadioGroup>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/gender"
            android:textSize="30sp"
            android:textColor="@color/purple"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="6dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Result"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="محاسبه"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="@drawable/button_style2"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_Result"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/white"/>
    </LinearLayout>
</LinearLayout>
