<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange"
        android:id="@+id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <Switch
            android:id="@+id/mySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_gravity="left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/staying_trunOn_Screen"
            android:textColor="@color/gray"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_font"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/putting_font_text"
        android:textColor="@color/gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightPurple"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Spinner
        android:layout_marginTop="20dp"
        android:id="@+id/spn_fonts"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/txt_size"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selection_TextSize"
        android:textColor="@color/gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightPurple"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <SeekBar
        android:layout_marginTop="20dp"
        android:id="@+id/seekbar_size"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progress="25"
        android:background="@drawable/back_style"
        android:padding="10dp">
    </SeekBar>
    <TextView
        android:id="@+id/txt_space"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selection_space_lines"
        android:textColor="@color/gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightPurple"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <SeekBar
        android:layout_marginTop="20dp"
        android:id="@+id/seekbar_space"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progress="25"
        android:background="@drawable/back_style"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/txt_show"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exampleText"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/gray" />
</LinearLayout>
