<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/burnt">
    <LinearLayout
        android:id="@+id/lay_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:background="@color/orange"
        android:weightSum="4"
        android:padding="5dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_share"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/share_variant"
            android:onClick="btnsClick"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_sms"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:onClick="btnsClick"
            android:src="@drawable/message_processing"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_copy"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:onClick="btnsClick"
            android:src="@drawable/content_copy"/>
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_fav"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:onClick="btnsClick"
            android:src="@drawable/heart_outline"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lin_size"
        android:layout_below="@+id/lay_toolbar"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="-16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/back_style"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/drug_name"
                android:textColor="#560404"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/gorohedaro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@string/group_drugs"
                android:textColor="@color/cherry"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"/>
            <View
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/txt_grohedaro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:paddingRight="20dp"
                android:textColor="@color/very_dark"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/moredemasraf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@string/uses_cases"
                android:textColor="@color/cherry"
                android:textSize="18sp"/>
            <View
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@color/black"
                android:baselineAligned="true"
                tools:ignore="Orientation"/>
            <TextView
                android:id="@+id/txt_moredemasraf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text=""
                android:textColor="@color/very_dark"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/mizanemasraf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@string/Consumption"
                android:textColor="@color/cherry"
                android:textSize="18sp"/>
            <View
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/txt_mizanemasraf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text=""
                android:textColor="@color/very_dark"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tozihat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@string/description_of_the_drug"
                android:textColor="@color/cherry"
                android:textSize="18sp"/>
            <View
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/txt_tozihat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text=""
                android:textColor="@color/very_dark"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/lin_size"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="@color/orange"
        android:weightSum="3">
        <SeekBar
            android:layout_marginLeft="10dp"
            android:id="@+id/seekbar_size"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:progress="25"
            android:max="100"
            android:background="@drawable/backsearch"
            android:padding="10dp">
        </SeekBar>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/changing_sizetext"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
</RelativeLayout>
